--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.17.1",
     "firebase-tools": "^11.30.0",
     "formik": "^2.2.9",
+    "gsap": "^3.12.5",
     "lodash": "^4.17.21",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
