--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.00",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.13",
+    "@react-pdf/renderer": "^4.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -28,6 +30,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-modern-drawer": "^1.2.0",
     "react-player": "^2.12.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.12",
