--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
+    "echarts": "^5.5.1",
+    "echarts-gl": "^2.0.9",
     "firebase": "^9.17.1",
     "firebase-tools": "^11.30.0",
     "gsap": "^3.12.5",
