--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.21.2",
+    "bcryptjs": "^3.0.2",
     "colorthief": "^2.4.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
