--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "firebase-tools": "^11.30.0",
     "gsap": "^3.12.5",
     "lodash": "^4.17.21",
-    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.11.0",
@@ -68,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "sass": "^1.93.2",
     "tailwindcss": "^3.3.2"
   }
 }
