--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.7",
     "echarts": "^5.5.1",
     "echarts-gl": "^2.0.9",
+    "file-saver": "^2.0.5",
     "firebase": "^9.17.1",
     "firebase-tools": "^11.30.0",
     "gsap": "^3.12.5",
@@ -39,6 +40,7 @@
     "recharts": "^2.12.7",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
+    "xlsx": "^0.18.5",
     "yarn": "^1.22.19",
     "yup": "^1.1.1"
   },
